# dectime

./: .coveragerc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
src/dectime/: __init__.py
tests/: conftest.py  test_skeleton.py
