[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[project]
name = "dectime"
#version = "0.1.0"
description = "Decimal time cli."
readme = "README.rst"
authors = [{ name = "allan bailey", email = "zirpubolci@gmail.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cli"]
dependencies = [
	     "colorama >= 0.4.4",
	     "python-baseconv >= 1.2.2"
]
requires-python = ">=3.9"

dynamic = ["version"]

# [project.optional-dependencies]
# dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

# [project.urls]
# Homepage = "https://github.com/realpython/reader"

[project.scripts]
dectime = "dectime:main"
